# svelte-template

./: .gitignore  README.md  cookiecutter.json  pyproject.toml
.github/: dependabot.yml
.github/workflows/: test.yml
{{ cookiecutter.project_name }}/: .gitignore  README.md  package.json  pnpm-lock.yaml  tailwind.config.cjs  tsconfig.json  vite.config.ts
{{ cookiecutter.project_name }}/.github/workflows/: bump-template.yml
{{ cookiecutter.project_name }}/src/: app.css  app.html
{{ cookiecutter.project_name }}/src/routes/: +layout.svelte
